[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "agriculture-robotics-mcp"
version = "1.0.3"
readme = "README.md"
description = "Agriculture Robotics tools for AI agents. Capabilities: robot safety check, spray plan calculator, harvest optimization. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "agriculture", "robotics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/agriculture-robotics-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
agriculture_robotics_mcp = "server:main"
